Ajuste dos navegadores e paginas novas

--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -28,11 +28,11 @@
         </nav>
         <nav id="nagsec" class="navproduto">
             <a href="../home.html">Vídeo</a>
-            <a href="#" class="atual">MEGG wOrmhOle System</a>
+            <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
-            <a href="valor.html">Valor Agregado</a>
+            <a href="#" class="atual">Valor Agregado</a>
         </nav>
     </header>
     <header class="header0">
@@ -43,64 +43,6 @@
     
 
     <main>
-        <h1>MEGG wOrmhOle System</h1>
-        <h3>O lego da construção modular de alvenaria em nível dos menores elementos.</h3>
-        <h3>Antecipando na fábrica o que era feito na obra.</h3>
-        <h3>Construindo um futuro sem entulhos.</h3>
-
-        <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
-        <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos de construção:</p>
-        <ol>
-            <li>Construção modular em nível dos menores elementos, compreendendo blocos modulares para paredes, blocos modulares para pilares (fora das paredes), blocos modulares para vigas, portas modulares, janelas modulares, caixas modulares;
-            </li>
-            <li>Módulos manuseáveis;</li>
-            <li>Design modular M10 com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
-            <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos <a href="#">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
-           <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
-           <li>Sistema de aderência através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
-           <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização incorporada à massa do bloco, blocos na cor natural ou com pintura, revestimento, rodapé, blocos com caixinhas elétricas, etc.</li>
-           <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
-           <li>Parede e fachada com vida útil de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
-        </ol>
-
-
-
-        <h1>Diferenciais</h1>
-        <p>O MEEG wOrmhOle system tem pelo menos os seguintes diferenciais:</p>
-        <ol>
-            <li>Sistema patenteado 1&#41; de produto;</li>
-            <li>Sistema patenteado 1&#41; de processo de montagem;</li>
-            <li>Sistema patenteado 1&#41; de processo de fabricação;</li>
-            <li>Resolve a necessidade de acesso, espaço e máquinas pesadas para movimentação dos módulos tradicionais;</li>
-            <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
-            <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Compre os MEGGs e projete e faça você mesmo, ou o seu arquiteto e o seu pedreiro.</li>
-        </ol>
-        <p><strong>Obs.: </strong>1. Vide pedidos de patente no item Patentes abaixo.</p>
-
-
-        <h1>Processo de Montagem</h1>
-        <p>Resumindo o processo de montagem em 2 etapas simples e rápidas:</p>
-        <ol>
-            <li>Pré-montagem à seco e sem encaixes de todos os elementos ao mesmo tempo, incluindo blocos, portas, janelas, tubulações, eletrodutos, armaduras, etc.;</li>
-            <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada.</li>
-        </ol>
-        <p>Resultado: Com exceção do piso e da laje, o pavimento &#40;finalizado&#41;, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
-
-
-        <h1>Solução dos Problemas</h1>
-        <p>A wOrmhOle oferece a solução para os seguintes problemas apresentados abaixo:</p>
-        <ol>
-            <li>Assentamento tradicional trabalhoso dos blocos com argamassa;</li>
-            <li>Execução trabalhosa das caixarias para vigas e pilares, principalmente os pilares não embutidos na parede;</li>
-            <li>Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
-            <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
-            <li>Execução trabalhosa do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes;</li>
-            <li>Vida útil pequena do reboco e da pintura das paredes;</li>
-            <li>Alto custo do processo executado manualmente se comparado com o processo industrializado.</li>
-        </ol>
-
-
         <h1>Valor Agregado</h1>
 
         <h2>Para as construtoras:</h2>
