--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -28,9 +28,9 @@
         </nav>
         <nav id="nagsec" class="navproduto">
             <a href="../home.html">Vídeo</a>
-            <a href="#" class="atual">MEGG wOrmhOle System</a>
+            <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
-            <a href="processos.html">Processo de Montagem</a>
+            <a href="#" class="atual">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
         </nav>
@@ -43,42 +43,6 @@
     
 
     <main>
-        <h1>MEGG wOrmhOle System</h1>
-        <h3>O lego da construção modular de alvenaria em nível dos menores elementos.</h3>
-        <h3>Antecipando na fábrica o que era feito na obra.</h3>
-        <h3>Construindo um futuro sem entulhos.</h3>
-
-        <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
-        <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos de construção:</p>
-        <ol>
-            <li>Construção modular em nível dos menores elementos, compreendendo blocos modulares para paredes, blocos modulares para pilares (fora das paredes), blocos modulares para vigas, portas modulares, janelas modulares, caixas modulares;
-            </li>
-            <li>Módulos manuseáveis;</li>
-            <li>Design modular M10 com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
-            <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos <a href="#">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
-           <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
-           <li>Sistema de aderência através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
-           <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização incorporada à massa do bloco, blocos na cor natural ou com pintura, revestimento, rodapé, blocos com caixinhas elétricas, etc.</li>
-           <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
-           <li>Parede e fachada com vida útil de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
-        </ol>
-
-
-
-        <h1>Diferenciais</h1>
-        <p>O MEEG wOrmhOle system tem pelo menos os seguintes diferenciais:</p>
-        <ol>
-            <li>Sistema patenteado 1&#41; de produto;</li>
-            <li>Sistema patenteado 1&#41; de processo de montagem;</li>
-            <li>Sistema patenteado 1&#41; de processo de fabricação;</li>
-            <li>Resolve a necessidade de acesso, espaço e máquinas pesadas para movimentação dos módulos tradicionais;</li>
-            <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
-            <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Compre os MEGGs e projete e faça você mesmo, ou o seu arquiteto e o seu pedreiro.</li>
-        </ol>
-        <p><strong>Obs.: </strong>1. Vide pedidos de patente no item Patentes abaixo.</p>
-
-
         <h1>Processo de Montagem</h1>
         <p>Resumindo o processo de montagem em 2 etapas simples e rápidas:</p>
         <ol>
@@ -86,98 +50,6 @@
             <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada.</li>
         </ol>
         <p>Resultado: Com exceção do piso e da laje, o pavimento &#40;finalizado&#41;, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
-
-
-        <h1>Solução dos Problemas</h1>
-        <p>A wOrmhOle oferece a solução para os seguintes problemas apresentados abaixo:</p>
-        <ol>
-            <li>Assentamento tradicional trabalhoso dos blocos com argamassa;</li>
-            <li>Execução trabalhosa das caixarias para vigas e pilares, principalmente os pilares não embutidos na parede;</li>
-            <li>Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
-            <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
-            <li>Execução trabalhosa do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes;</li>
-            <li>Vida útil pequena do reboco e da pintura das paredes;</li>
-            <li>Alto custo do processo executado manualmente se comparado com o processo industrializado.</li>
-        </ol>
-
-
-        <h1>Valor Agregado</h1>
-
-        <h2>Para as construtoras:</h2>
-        <p>Eliminação da mão de obra e dos materiais, ferramentas e dispositivos para a execução: </p>
-        <ol>
-            <li>Do assentamento tradicional dos blocos com argamassa;</li>
-            <li>Das caixarias para vigas e pilares;</li>
-            <li>Dos rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
-            <li>Do processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
-            <li>Do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes.</li>
-        </ol>
-        <ul>
-            <li>Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
-            <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
-            <li>Aumento da vida útil das paredes;</li>
-            <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do lucro;</li>
-        </ul>
-
-        <h2>Para os fabricantes de blocos:</h2>
-        <ul>
-            <li>Valor agregado 3 vezes maior se comparado com o valor do bloco tradicional;</li>
-            <li>Oportunidade de investir na nova tecnologia e triplicar o faturamento.</li>
-            <li>Quem não procurar se adaptar às novas tecnologias vai ficar produzindo um produto obsoleto.
-            </li>
-        </ul>
-
-
-        <h1>Pedidos de Patente</h1>
-        <h2>Para os Blocos:</h2>
-        <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
-
-
-        <h3>Pedido de Patente no Brasil</h3>
-        <p><a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq001link" onclick="clickArq001()">ver PDF na mesma página</a></p>
-        <div id="arq001frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h3>Opinião Preliminar no Brasil</h3>
-        <p><a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF em outra guia</a></a></p>
-        <p><a id="arq002link" onclick="clickArq002()">ver PDF na mesma página</a></p>
-        <div id="arq002frame" class="arquivopdf">
-            <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-
-
-        <h3>Pedido de Patente Internacional</h3>
-        <p><a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq003link" onclick="clickArq003()">ver PDF na mesma página</a></p>
-        <div id="arq003frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h3>Opinião Preliminar Internacional</h3>
-        <p><a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq004link" onclick="clickArq004()">ver PDF na mesma página</a></p>
-        <div id="arq004frame" class="arquivopdf">
-            <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h2>Para as Esquadrias:</h2>
-        <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-
-
-        <h3>Pedido de Patente dos Frames</h3>
-        <p><a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq005link" onclick="clickArq005()">ver PDF na mesma página</a></p>
-        <div id="arq005frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
     </main>
 
     <script>
