Ajuste de conteúdo

--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -46,14 +46,14 @@
         <h1>Diferenciais</h1>
         <p>O MEEG wOrmhOle system tem pelo menos os seguintes diferenciais:</p>
         <ol>
-            <li>Sistema patenteado 1&#41; de produto;</li>
-            <li>Sistema patenteado 1&#41; de processo de montagem;</li>
-            <li>Sistema patenteado 1&#41; de processo de fabricação;</li>
+            <li>Sistema patenteável de produto;</li>
+            <li>Sistema patenteável de processo de montagem;</li>
+            <li>Sistema patenteável de processo de fabricação;</li>
             <li>Resolve a necessidade de acesso, espaço e máquinas pesadas para movimentação dos módulos tradicionais;</li>
             <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
-            <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Compre os MEGGs e projete e faça você mesmo, ou o seu arquiteto e o seu pedreiro.</li>
+            <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Faça você mesmo!</li>
         </ol>
-        <p><strong>Obs.: </strong>1. Vide pedidos de patente no item Patentes abaixo.</p>
+        <p><strong>Obs.: </strong>1. Vide pedidos de patente na aba "<a href="#">Parceiros & Investidores</a>".</p>
     </main>
 
     <script>
