--- a/paginas/processos.html
+++ b/paginas/processos.html
@@ -49,7 +49,7 @@
             <li>Pré-montagem à seco e sem encaixes de todos os elementos ao mesmo tempo, incluindo blocos, portas, janelas, tubulações, eletrodutos, armaduras, etc.;</li>
             <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada.</li>
         </ol>
-        <p>Resultado: Com exceção do piso e da laje, o pavimento &#40;finalizado&#41;, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
+        <p>Resultado: Com exceção do piso e da laje, o pavimento fica &#40;finalizado&#41;, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc.</p>
     </main>
 
     <script>
