--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -51,6 +51,7 @@
             <li>Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
             <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
             <li>Execução trabalhosa do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes;</li>
+            <li>Quebra-quebra na obra, sujeira; entulho;</li>
             <li>Vida útil pequena do reboco e da pintura das paredes;</li>
             <li>Alto custo do processo executado manualmente se comparado com o processo industrializado.</li>
         </ol>
