adicionando video e ajustando conteudo

--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -41,17 +41,46 @@
     </header>
     
     <main>
+        <h2>Para as construtoras:</h2>
+        <p>Eliminação da mão de obra e dos materiais, ferramentas e dispositivos para a execução: </p>
+        <ol>
+            <li>Do assentamento tradicional dos blocos com argamassa;</li>
+            <li>Das caixarias para vigas e pilares;</li>
+            <li>Dos rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
+            <li>Do processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
+            <li>Do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes.</li>
+        </ol>
         <ul>
-            <li>Vídeo pitch</li>
-            <li>Pitch deck</li>
-            <li>Elevator pitch</li>
-            <li>Tweet pitch</li>
-            <li>One pager</li>
-            <li>Contrato de Parceria</li>
-            <li>Contrato de Franquia</li>
-            <li>Contrato de Investidor</li>
-            <li>Contrato de Licenciamento</li>
+            <li>Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
+            <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
+            <li>Aumento da vida útil das paredes;</li>
+            <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do lucro;</li>
         </ul>
+
+        <h2>Para os fabricantes de blocos:</h2>
+        <ul>
+            <li>Valor agregado 3 vezes maior se comparado com o valor do bloco tradicional;</li>
+            <li>Oportunidade de investir na nova tecnologia e triplicar o faturamento.</li>
+            <li>Quem não procurar se adaptar às novas tecnologias vai ficar produzindo um produto obsoleto.
+            </li>
+        </ul>
+
+
+        <h1>Pedidos de Patente</h1>
+        <h2>Para os Blocos:</h2>
+        <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
+        <p><a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">Pedido de Patente no Brasil</a></p>
+        <p><a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">Opinião Preliminar no Brasil</a></a></p>
+
+
+        <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
+        <p><a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">Pedido de Patente Internacional</a></p>
+        <p><a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">Opinião Preliminar Internacional</a></p>
+
+
+        <h2>Para as Esquadrias:</h2>
+        <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
+        <p><a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">Pedido de Patente das Esquadrias</a></p>
     </main>
 
     <script>
