--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -44,82 +44,15 @@
 
     <main>
         <h1>Valor Agregado</h1>
-
-        <h2>Para as construtoras:</h2>
-        <p>Eliminação da mão de obra e dos materiais, ferramentas e dispositivos para a execução: </p>
-        <ol>
-            <li>Do assentamento tradicional dos blocos com argamassa;</li>
-            <li>Das caixarias para vigas e pilares;</li>
-            <li>Dos rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
-            <li>Do processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
-            <li>Do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes.</li>
-        </ol>
+        <p>Redução da mão de obra e dos materiais, ferramentas e dispositivos para a execução:</p>
         <ul>
-            <li>Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
+            <li> Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos
+                perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
             <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
             <li>Aumento da vida útil das paredes;</li>
-            <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do lucro;</li>
+            <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do
+                lucro;</li>
         </ul>
-
-        <h2>Para os fabricantes de blocos:</h2>
-        <ul>
-            <li>Valor agregado 3 vezes maior se comparado com o valor do bloco tradicional;</li>
-            <li>Oportunidade de investir na nova tecnologia e triplicar o faturamento.</li>
-            <li>Quem não procurar se adaptar às novas tecnologias vai ficar produzindo um produto obsoleto.
-            </li>
-        </ul>
-
-
-        <h1>Pedidos de Patente</h1>
-        <h2>Para os Blocos:</h2>
-        <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
-
-
-        <h3>Pedido de Patente no Brasil</h3>
-        <p><a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq001link" onclick="clickArq001()">ver PDF na mesma página</a></p>
-        <div id="arq001frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h3>Opinião Preliminar no Brasil</h3>
-        <p><a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF em outra guia</a></a></p>
-        <p><a id="arq002link" onclick="clickArq002()">ver PDF na mesma página</a></p>
-        <div id="arq002frame" class="arquivopdf">
-            <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-
-
-        <h3>Pedido de Patente Internacional</h3>
-        <p><a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq003link" onclick="clickArq003()">ver PDF na mesma página</a></p>
-        <div id="arq003frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h3>Opinião Preliminar Internacional</h3>
-        <p><a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq004link" onclick="clickArq004()">ver PDF na mesma página</a></p>
-        <div id="arq004frame" class="arquivopdf">
-            <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
-
-
-        <h2>Para as Esquadrias:</h2>
-        <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-
-
-        <h3>Pedido de Patente dos Frames</h3>
-        <p><a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF em outra guia</a></p>
-        <p><a id="arq005link" onclick="clickArq005()">ver PDF na mesma página</a></p>
-        <div id="arq005frame" class="arquivopdf">
-            <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
-        </div>
     </main>
 
     <script>
@@ -144,47 +77,6 @@
             }
         }
 
-
-        function clickArq001(){
-            if(arq001frame.style.display=='block'){
-                arq001frame.style.display='none'
-            }
-            else{
-                arq001frame.style.display='block'
-            }
-        }
-        function clickArq002(){
-            if(arq002frame.style.display=='block'){
-                arq002frame.style.display='none'
-            }
-            else{
-                arq002frame.style.display='block'
-            }
-        }
-        function clickArq003(){
-            if(arq003frame.style.display=='block'){
-                arq003frame.style.display='none'
-            }
-            else{
-                arq003frame.style.display='block'
-            }
-        }
-        function clickArq004(){
-            if(arq004frame.style.display=='block'){
-                arq004frame.style.display='none'
-            }
-            else{
-                arq004frame.style.display='block'
-            }
-        }
-        function clickArq005(){
-            if(arq005frame.style.display=='block'){
-                arq005frame.style.display='none'
-            }
-            else{
-                arq005frame.style.display='block'
-            }
-        }
         
         function change(){
             burger.style.color='white'
