--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos/Equipamento</title>
+    <title>MEGG wOrmhOle/Produtos/Equipamento</title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
