--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
-<body onresize="mudouTamanho()">
+<body onresize="mudouTamanho()" onload="navarrumado()">
     <header>
         <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
@@ -17,15 +17,15 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="../home.html">Home</a>
+                <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <a href="#" id="prod" class="atual">Produtos</a>
+                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="parceiros.html">Parceiros & Investidores</a>
+                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
-        <nav id="nagsec" class="navproduto">
+        <nav class="navbar" id="navproduto">
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
@@ -33,18 +33,78 @@
             <a href="produto_page5.html">Dispositivos</a>
             <a href="#" class="atual">Equipamentos</a>
         </nav>
+        <nav class="navbar" id="navhome">
+            <a href="../home.html">Vídeo</a>
+            <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
+            <a href="paginas/diferenciais.html">Diferenciais</a>
+            <a href="paginas/processos.html">Processo de Montagem</a>
+            <a href="paginas/solucaoproblemas.html">Solução dos Problemas</a>
+            <a href="paginas/valor.html">Valor Agregado</a>
+        </nav>
+        <nav class="navbar" id="navparceiros">
+            <a href="#">Pedidos de Patente</a>
+            <a href="#">Pitch Deck</a>
+            <a href="#">One Pager</a>
+            <a href="#">Video de MVP</a>
+            <a href="#">TRL</a>
+            <a href="#">Valoração</a>
+        </nav>
     </header>
     <header class="header0">
         <img src="imagens/Logo/logo.png" alt="Logo">
-        <nav id="nagsec" class="navproduto">
-        </nav>
     </header>
     
     <main>
-        <h1>Pagina 6</h1>
+        <h1>Pagina teste</h1>
     </main>
 
     <script>
+        function navarrumado(){
+            navhome.style.display='none'
+            navproduto.style.display='none'
+            navparceiros.style.display='none'
+        }
+        function navA1(){
+            if(navhome.style.display=='none'){
+                navhome.style.display='flex'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+        function navA2(){
+            if(navproduto.style.display=='none'){
+                navproduto.style.display='flex'
+                navhome.style.display='none'
+                navparceiros.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+        function navA3(){
+            if(navparceiros.style.display=='none'){
+                navparceiros.style.display='flex'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+
+
+
+
+
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
@@ -70,15 +130,7 @@
             }
         }
 
-        function substituirElementos() {
-            if(window.innerWidth<=768){
-                const prod = document.getElementById("prod");
-                const nagsec = document.getElementById("nagsec");
-                prod.innerHTML = nagsec.innerHTML;
-                prod.className = nagsec.className;
-                nagsec.style.display = 'none';
-            }
-        }
+        
         function change(){
             burger.style.color='white'
             burger.style.background='darkred'
