--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -8,25 +8,52 @@
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
-<body onresize="mudouTamanho()">
+<body onresize="mudouTamanho()" onload="navarrumado()">
     <header>
-        <menu>
+        <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="../home.html">Home</a>
+                <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <a href="produto_page1.html">Produtos</a>
-                <a href="#" class="atual">Sobre Nós</a>
-                <a href="parceiros.html">Parceiros & Investidores</a>
+                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
+                <a href="sobre.html">Sobre Nós</a>
+                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
+        <nav class="navbar" id="navproduto">
+            <a href="produto_page1.html">Blocos</a>
+            <a href="produto_page2.html">Esquadrilhas</a>
+            <a href="produto_page3.html">Caixas</a>
+            <a href="produto_page4.html">Material Aderente</a>
+            <a href="produto_page5.html">Dispositivos</a>
+            <a href="#" class="atual">Equipamentos</a>
+        </nav>
+        <nav class="navbar" id="navhome">
+            <a href="../home.html">Vídeo</a>
+            <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
+            <a href="paginas/diferenciais.html">Diferenciais</a>
+            <a href="paginas/processos.html">Processo de Montagem</a>
+            <a href="paginas/solucaoproblemas.html">Solução dos Problemas</a>
+            <a href="paginas/valor.html">Valor Agregado</a>
+        </nav>
+        <nav class="navbar" id="navparceiros">
+            <a href="#">Pedidos de Patente</a>
+            <a href="#">Pitch Deck</a>
+            <a href="#">One Pager</a>
+            <a href="#">Video de MVP</a>
+            <a href="#">TRL</a>
+            <a href="#">Valoração</a>
+        </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
+    <header class="header0">
+        <img src="imagens/Logo/logo.png" alt="Logo">
+    </header>
+    
 
     <main>
         <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
