--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -61,6 +61,48 @@
 
 
     <script>
+        function navarrumado(){
+            navhome.style.display='none'
+            navproduto.style.display='none'
+            navparceiros.style.display='none'
+        }
+        function navA1(){
+            if(navhome.style.display=='none'){
+                navhome.style.display='flex'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+        function navA2(){
+            if(navproduto.style.display=='none'){
+                navproduto.style.display='flex'
+                navhome.style.display='none'
+                navparceiros.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+        function navA3(){
+            if(navparceiros.style.display=='none'){
+                navparceiros.style.display='flex'
+                navhome.style.display='none'
+                navproduto.style.display='none'
+            }
+            else{
+                navhome.style.display='none'
+                navproduto.style.display='none'
+                navparceiros.style.display='none'
+            }
+        }
+        
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
