--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" class="atual">Home &#9776;</p>
+                <p onclick="navA1()">Home &#9776;</p>
                 <a href="paginas/solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="paginas/sobre.html">Sobre Nós</a>
@@ -40,7 +40,7 @@
             <a href="paginas/produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="#" class="atual">Vídeo</a>
+            <a href="home.html">Vídeo</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="paginas/diferenciais.html">Diferenciais</a>
             <a href="paginas/processos.html">Processo de Montagem</a>
@@ -48,7 +48,7 @@
             <a href="paginas/valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="#">Pedidos de Patente</a>
+            <a href="paginas/parceiros.html">Pedidos de Patente</a>
             <a href="#">Pitch Deck</a>
             <a href="#">One Pager</a>
             <a href="#">Video de MVP</a>
