--- a/paginas/produto_page2.html
+++ b/paginas/produto_page2.html
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" class="atual">Home &#9776;</p>
+                <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -39,10 +39,10 @@
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
-            <a href="#" class="atual">Valor Agregado</a>
+            <a href="valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="#">Pedidos de Patente</a>
+            <a href="parceiros.html">Pedidos de Patente</a>
             <a href="#">Pitch Deck</a>
             <a href="#">One Pager</a>
             <a href="#">Video de MVP</a>
