novo navegador completo

--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -22,7 +22,7 @@
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
-                <a href="fale.html">Fale Conosco</a>
+                <a href="fale.html" class="atual">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
