--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -21,7 +21,7 @@
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
+                <p onclick="navA3()" class="atual">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
@@ -42,7 +42,7 @@
             <a href="valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="parceiros.html">Pedidos de Patente</a>
+            <a href="parceiros.html" class="atual">Pedidos de Patente</a>
             <a href="#">Pitch Deck</a>
             <a href="#">One Pager</a>
             <a href="#">Video de MVP</a>
