--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -19,14 +19,14 @@
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
-            <a href="produto_page1.html">Blocos</a>
+            <a href="produto_page1.html" class="atual">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
