--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()">Home &#9776;</p>
+                <p onclick="navA1()" class="atual">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -38,7 +38,7 @@
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
-            <a href="solucaoproblemas.html">Solução dos Problemas</a>
+            <a href="solucaoproblemas.html" class="atual">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
