--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -19,7 +19,7 @@
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
@@ -31,7 +31,7 @@
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
-            <a href="produto_page6.html">Equipamentos</a>
+            <a href="produto_page6.html" class="atual">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo</a>
