--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -18,7 +18,7 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
-                <a href="solucoes.html">Soluções de Montagem</a>
+                <a href="solucoes.html" class="atual">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
