ajuste nos links unicos

--- a/paginas/diferenciais.html
+++ b/paginas/diferenciais.html
@@ -36,7 +36,7 @@
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
-            <a href="diferenciais.html" class="atual">Diferenciais</a>
+            <a href="#" class="atual">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
