--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -42,7 +42,7 @@
             <a href="valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="parceiros.html" class="atual">Pedidos de Patente</a>
+            <a href="#" class="atual">Pedidos de Patente</a>
             <a href="#">Pitch Deck</a>
             <a href="#">One Pager</a>
             <a href="#">Video de MVP</a>
