--- a/paginas/produto_page5.html
+++ b/paginas/produto_page5.html
@@ -30,7 +30,7 @@
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
-            <a href="produto_page5.html" class="atual">Dispositivos</a>
+            <a href="#" class="atual">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
