--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -39,7 +39,7 @@
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
-            <a href="valor.html" class="atual">Valor Agregado</a>
+            <a href="#" class="atual">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
