--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
-            <a href="produto_page1.html" class="atual">Blocos</a>
+            <a href="#" class="atual">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
