--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -29,7 +29,7 @@
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
-            <a href="produto_page4.html" class="atual">Material Aderente</a>
+            <a href="#" class="atual">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
