--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -20,7 +20,7 @@
                 <p onclick="navA1()">Home &#9776;</p>
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
-                <a href="sobre.html" class="atual">Sobre Nós</a>
+                <a href="#" class="atual">Sobre Nós</a>
                 <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
