--- a/paginas/solucaoproblemas.html
+++ b/paginas/solucaoproblemas.html
@@ -38,7 +38,7 @@
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
-            <a href="solucaoproblemas.html" class="atual">Solução dos Problemas</a>
+            <a href="#" class="atual">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
         </nav>
         <nav class="navbar" id="navparceiros">
