mudança de pagina

--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -18,11 +18,10 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
-                <a href="solucoes.html">Soluções de Montagem</a>
                 <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
-                <a href="#" class="atual">Fale Conosco</a>
+                <a href="#">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
@@ -40,6 +39,7 @@
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
+            <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
@@ -56,8 +56,8 @@
     
  
     <main>
-        <p><strong>Email:</strong> contato@sulfibra.com.br</p>
-        <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
+        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
+        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
     </main>
 
 
