--- a/paginas/valor.html
+++ b/paginas/valor.html
@@ -57,8 +57,8 @@
 
     <main>
         <h1>Valor Agregado</h1>
-        <p>Redução da mão de obra e dos materiais, ferramentas e dispositivos para a execução:</p>
         <ul>
+            <li>Redução da mão de obra e dos materiais, ferramentas e dispositivos para a execução;</li>
             <li> Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos
                 perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
             <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
