--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEGG wOrmhOle/Solução dos Problemas</title>
+    <title>MEGG wOrmhOle/Soluções de Montagem</title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -56,7 +56,95 @@
     
 
     <main>
-        <h1>Soluçoes</h1>
+        <h1>Soluções de Montagem</h1>
+        <table>
+            <colgroup>
+                <col class="cdesc">
+                <col class="clink">
+            </colgroup>
+            <thead>
+                <th scope="col">Descrição</th>
+                <th scope="col">Link</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Amarração da parede com blocos Genéricos</td>
+                    <td><a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" rel="nofollow">Fig.1</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração em L com blocos Terminais</td>
+                    <td><a href="imagens/Produtos/Image Figs/02_Amar_L-0.jpg" rel="nofollow">Fig.2</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração em T com blocos Terminais</td>
+                    <td><a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" rel="nofollow">Fig.3</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração em X com blocos Genéricos</td>
+                    <td><a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração de ombreira de vão Alinhado à parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" rel="nofollow">Fig.5</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração de ombreira de vão Transversal à parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" rel="nofollow">Fig.6</a></td>
+                </tr>
+                <tr>
+                    <td>Verga para Porta - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" rel="nofollow">Fig.7</a></td>
+                </tr>
+                <tr>
+                    <td>Verga para Porta - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - na Terminação da parede-0.jpg" rel="nofollow">Fig.8</a></td>
+                </tr>
+                <tr>
+                    <td>Verga para Janela - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" rel="nofollow">Fig.9</a></td>
+                </tr>
+                <tr>
+                    <td>Verga para Janela - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/10_Verga para Janela - na Terminação da parede-0.jpg" rel="nofollow">Fig.10</a></td>
+                </tr>
+                <tr>
+                    <td>Contraverga - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/11_Contraverga - Típico-0.jpg" rel="nofollow">Fig.11</a></td>
+                </tr>
+                <tr>
+                    <td>Contraverga - Na Terminação da parede</td>
+                    <td><a href="imagens/Produtos/Image Figs/12_Contraverga - na Terminação da parede-0.jpg" rel="nofollow">Fig.12</a></td>
+                </tr>
+                <tr>
+                    <td>Montagem do Peitoril - Típico</td>
+                    <td><a href="imagens/Produtos/Image Figs/13_Montagem do Peitoril-0.jpg" rel="nofollow">Fig.13</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração de canaletas U</td>
+                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de Canaletas U-0.jpg" rel="nofollow">Fig.14</a></td>
+                </tr>
+                <tr>
+                    <td>Amarração de canaletas J</td>
+                    <td><a href="imagens/Produtos/Image Figs/15_Amarração de canaletas J-0.jpg" rel="nofollow">Fig.15</a></td>
+                </tr>
+                <tr>
+                    <td>Viga - Apoio sobre coluna</td>
+                    <td><a href="imagens/Produtos/Image Figs/16_Viga - Apoio sobre coluna-0.jpg" rel="nofollow">Fig.16</a></td>
+                </tr>
+                <tr>
+                    <td>Viga - Terminação em T</td>
+                    <td><a href="imagens/Produtos/Image Figs/17_Viga - Terminação em T-0.jpg" rel="nofollow">Fig.17</a></td>
+                </tr>
+                <tr>
+                    <td>Viga - Terminação em X</td>
+                    <td><a href="imagens/Produtos/Image Figs/18_Viga - Terminação em X-0.jpg" rel="nofollow">Fig.18</a></td>
+                </tr>
+                <tr>
+                    <td>Pilar</td>
+                    <td><a href="imagens/Produtos/Image Figs/19_Pilar-0.jpg" rel="nofollow">Fig.19</a></td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
 
