--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -21,7 +21,7 @@
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="#">Fale Conosco</a>
+                <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
         <nav class="navbar" id="navproduto">
@@ -43,11 +43,11 @@
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
-            <a href="#">Pitch Deck</a>
-            <a href="#">One Pager</a>
-            <a href="#">Video de MVP</a>
-            <a href="#">TRL</a>
-            <a href="#">Valoração</a>
+            <a href="pitchdeck.html">Pitch Deck</a>
+            <a href="onepager.html">One Pager</a>
+            <a href="videomvp.html">Video de MVP</a>
+            <a href="trl.html">TRL</a>
+            <a href="valoracao.html">Valoração</a>
         </nav>
     </header>
     <header class="header0">
