--- a/home.html
+++ b/home.html
@@ -23,11 +23,10 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" class="atual">Home &#9776;</p>
-                <a href="paginas/solucoes.html">Soluções de Montagem</a>
+                <p onclick="navA1()">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="paginas/sobre.html">Sobre Nós</a>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="paginas/fale.html">Fale Conosco</a>
             </div>
         </nav>
@@ -40,20 +39,21 @@
             <a href="paginas/produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="#" class="atual">Vídeo</a>
+            <a href="home.html">Vídeo de Apresentação</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="paginas/diferenciais.html">Diferenciais</a>
             <a href="paginas/processos.html">Processo de Montagem</a>
             <a href="paginas/solucaoproblemas.html">Solução dos Problemas</a>
             <a href="paginas/valor.html">Valor Agregado</a>
+            <a href="paginas/solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="paginas/parceiros.html">Pedidos de Patente</a>
-            <a href="#">Pitch Deck</a>
-            <a href="#">One Pager</a>
-            <a href="#">Video de MVP</a>
-            <a href="#">TRL</a>
-            <a href="#">Valoração</a>
+            <a href="paginas/pitchdeck.html">Pitch Deck</a>
+            <a href="paginas/onepager.html">One Pager</a>
+            <a href="paginas/videomvp.html">Vídeo de MVP</a>
+            <a href="paginas/trl.html">TRL</a>
+            <a href="paginas/valoracao.html">Valoração</a>
         </nav>
     </header>
     <header class="header0">
