--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -18,10 +18,9 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
-                <a href="solucoes.html">Soluções de Montagem</a>
-                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
+                <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
@@ -29,25 +28,26 @@
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
-            <a href="#" class="atual">Material Aderente</a>
+            <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="../home.html">Vídeo</a>
+            <a href="../home.html">Vídeo de Apresentação</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
+            <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
-            <a href="#">Pitch Deck</a>
-            <a href="#">One Pager</a>
-            <a href="#">Video de MVP</a>
-            <a href="#">TRL</a>
-            <a href="#">Valoração</a>
+            <a href="pitchdeck.html">Pitch Deck</a>
+            <a href="onepager.html">One Pager</a>
+            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="trl.html">TRL</a>
+            <a href="valoracao.html">Valoração</a>
         </nav>
     </header>
     <header class="header0">
