--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -17,11 +17,10 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()" class="atual">Home &#9776;</p>
-                <a href="solucoes.html">Soluções de Montagem</a>
+                <p onclick="navA1()">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
-                <p onclick="navA3()">Parceiros & Investidores &#9776;</p>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
@@ -34,20 +33,21 @@
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="../home.html">Vídeo</a>
-            <a href="#" class="atual">MEGG wOrmhOle System</a>
+            <a href="../home.html">Vídeo de Apresentação</a>
+            <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
+            <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
-            <a href="#">Pitch Deck</a>
-            <a href="#">One Pager</a>
-            <a href="#">Video de MVP</a>
-            <a href="#">TRL</a>
-            <a href="#">Valoração</a>
+            <a href="pitchdeck.html">Pitch Deck</a>
+            <a href="onepager.html">One Pager</a>
+            <a href="videomvp.html">Vídeo de MVP</a>
+            <a href="trl.html">TRL</a>
+            <a href="valoracao.html">Valoração</a>
         </nav>
     </header>
     <header class="header0">
