--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -33,7 +33,7 @@
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="../home.html">Vídeo</a>
+            <a href="../home.html">Vídeo de Apresentação</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
@@ -45,7 +45,7 @@
             <a href="parceiros.html">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
-            <a href="videomvp.html">Video de MVP</a>
+            <a href="videomvp.html">Vídeo de MVP</a>
             <a href="trl.html">TRL</a>
             <a href="valoracao.html">Valoração</a>
         </nav>
