Ajustando novas paginas

--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -56,6 +56,7 @@
     
  
     <main>
+        <h1>Contatos</h1>
         <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
         <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
     </main>
