--- a/paginas/valoracao.html
+++ b/paginas/valoracao.html
@@ -56,8 +56,8 @@
     
  
     <main>
-        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
-        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
+        <h1>Valoração</h1>
+        <a href="pdf/investidores/Valoração_Malgun Gothic_PDF.pdf" target="_blank">Valoração</a>
     </main>
 
 
