--- a/paginas/videomvp.html
+++ b/paginas/videomvp.html
@@ -56,8 +56,7 @@
     
  
     <main>
-        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
-        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
+        <h1>Video de MVP</h1>
     </main>
 
 
