--- a/paginas/onepager.html
+++ b/paginas/onepager.html
@@ -56,8 +56,8 @@
     
  
     <main>
-        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
-        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
+        <h1>One Pager</h1>
+        <a href="pdf/investidores/_OnePager_Worm_PDF.pdf" target="_blank">One Pager</a>
     </main>
 
 
