--- a/paginas/pitchdeck.html
+++ b/paginas/pitchdeck.html
@@ -56,8 +56,8 @@
     
  
     <main>
-        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
-        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
+        <h1>Pitch Deck</h1>
+        <a href="pdf/investidores/_Pitch deck worm PDF.pdf" target="_blank">Pitch Deck</a>
     </main>
 
 
