--- a/paginas/trl.html
+++ b/paginas/trl.html
@@ -56,8 +56,8 @@
     
  
     <main>
-        <p><strong>Email:</strong> meggwormhole@gmail.com.br</p>
-        <p><strong>Whatsapp:</strong> +55 12 98108-4911</p>
+        <h1>TRL</h1>
+        <a href="pdf/investidores/TRL completo.pdf" target="_blank">TRL</a>
     </main>
 
 
