ajuste de css no navegador

--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -19,7 +19,7 @@
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
-                <p onclick="navA3()">Docs para Investidores &#9776;</p>
+                <p onclick="navA3()" class="atual">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
@@ -42,7 +42,7 @@
             <a href="solucoes.html">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
-            <a href="parceiros.html">Pedidos de Patente</a>
+            <a href="parceiros.html" class="atual">Pedidos de Patente</a>
             <a href="pitchdeck.html">Pitch Deck</a>
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
