--- a/paginas/produto_page3.html
+++ b/paginas/produto_page3.html
@@ -18,7 +18,7 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
-                <p onclick="navA2()">Produtos &#9776;</p>
+                <p onclick="navA2()" class="atual">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
@@ -27,7 +27,7 @@
         <nav class="navbar" id="navproduto">
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
-            <a href="produto_page3.html">Caixas</a>
+            <a href="produto_page3.html" class="atual">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
