--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -20,7 +20,7 @@
                 <p onclick="navA1()">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
-                <a href="sobre.html">Sobre Nós</a>
+                <a href="sobre.html" class="atual">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
