--- a/paginas/valoracao.html
+++ b/paginas/valoracao.html
@@ -19,7 +19,7 @@
             <div>
                 <p onclick="navA1()">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
-                <p onclick="navA3()">Docs para Investidores &#9776;</p>
+                <p onclick="navA3()" class="atual">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
@@ -47,7 +47,7 @@
             <a href="onepager.html">One Pager</a>
             <a href="videomvp.html">Vídeo de MVP</a>
             <a href="trl.html">TRL</a>
-            <a href="valoracao.html">Valoração</a>
+            <a href="valoracao.html" class="atual">Valoração</a>
         </nav>
     </header>
     <header class="header0">
