--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()">Home &#9776;</p>
+                <p onclick="navA1()" class="atual">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="paginas/sobre.html">Sobre Nós</a>
@@ -39,7 +39,7 @@
             <a href="paginas/produto_page6.html">Equipamentos</a>
         </nav>
         <nav class="navbar" id="navhome">
-            <a href="home.html">Vídeo de Apresentação</a>
+            <a href="home.html" class="atual">Vídeo de Apresentação</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="paginas/diferenciais.html">Diferenciais</a>
             <a href="paginas/processos.html">Processo de Montagem</a>
