--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()">Home &#9776;</p>
+                <p onclick="navA1()" class="atual">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -34,7 +34,7 @@
         </nav>
         <nav class="navbar" id="navhome">
             <a href="../home.html">Vídeo de Apresentação</a>
-            <a href="sistema.html">MEGG wOrmhOle System</a>
+            <a href="sistema.html" class="atual">MEGG wOrmhOle System</a>
             <a href="diferenciais.html">Diferenciais</a>
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
