--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <p onclick="navA1()">Home &#9776;</p>
+                <p onclick="navA1()" class="atual">Home &#9776;</p>
                 <p onclick="navA2()">Produtos &#9776;</p>
                 <p onclick="navA3()">Docs para Investidores &#9776;</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -39,7 +39,7 @@
             <a href="processos.html">Processo de Montagem</a>
             <a href="solucaoproblemas.html">Solução dos Problemas</a>
             <a href="valor.html">Valor Agregado</a>
-            <a href="solucoes.html">Soluções de Montagem</a>
+            <a href="solucoes.html" class="atual">Soluções de Montagem</a>
         </nav>
         <nav class="navbar" id="navparceiros">
             <a href="parceiros.html">Pedidos de Patente</a>
